@@ -12,6 +12,9 @@ What's New in Python 3.1 beta 1?
 Core and Builtins
 -----------------
 
+- Issue #1113244: Py_XINCREF, Py_DECREF, Py_XDECREF: Add `do { ... } while (0)'
+  to avoid compiler warnings.
+
 Library
 -------
 
@@ -77,8 +80,6 @@ Core and Builtins
 
 - Issue #3845: In PyRun_SimpleFileExFlags avoid invalid memory access with
   short file names.
-
-- Py_DECREF: Add `do { ... } while (0)' to avoid compiler warnings.
 
 Library
 -------
